# eventually

./: Cargo.toml  README.md  flake.nix
src/: args.rs  calendar.rs  delegate.rs  event_observers.rs  events.rs  launchd.rs  lib.rs  main.rs  menu.rs  observers.rs
src/calendar/: error.rs  events.rs  formatting.rs  mod.rs  service.rs
src/ffi/: app_kit.rs  event_kit.rs  foundation.rs  mod.rs
src/menu/: builder.rs  delegate.rs  formatting.rs  icons.rs  mod.rs  text.rs
