[package]
name = "eventually"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eventually"
path = "src/main.rs"

[lib]
name = "eventually"
path = "src/lib.rs"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSArray",
  "NSDate",
  "NSCalendar",
  "NSDateFormatter",
  "NSTimeZone",
  "NSNotification",
  "NSProcessInfo",
  "NSURL",
  "NSAttributedString",
  "NSGeometry",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSResponder",
  "NSApplication",
  "NSMenu",
  "NSMenuItem",
  "NSStatusBar",
  "NSStatusItem",
  "NSStatusBarButton",
  "NSButton",
  "NSControl",
  "NSView",
  "NSRunningApplication",
  "NSWorkspace",
  "NSColor",
  "NSFont",
  "NSAttributedString",
  "NSImage",
] }
objc2-event-kit = { version = "0.3", features = [
  "EKEventStore",
  "EKEvent",
  "EKCalendar",
  "EKCalendarItem",
  "EKObject",
  "EKTypes",
  "block2",
  "objc2-app-kit",
] }
block2 = "0.6"
chrono = "0.4"
